--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
     <nav>
         <ul>
             <li><a href="#first">About us</a></li>
-            <li>Skils</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li><a href="#second">Skills</a></li>
+            <li><a href="#third">Portfolio</a></li>
+            <li><a href="#fourth">Contact</a></li>
         </ul>
     <section>
         <h1 id="#first">About us</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos temporibus maiores vel nesciunt enim necessitatibus unde, provident cumque fugit laudantium quas suscipit reprehenderit quidem aperiam dolorum tempore, rerum voluptatibus? Nemo.</p>
+    </section>
+    <section>
+        <h1 id="#second">Skills</h1>
+        <div class="skill">
+            <h2>Skill 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem id at tenetur minus ad placeat ex odio, earum eum architecto inventore quidem maxime officiis amet, explicabo exercitationem omnis fugiat! Velit?</p>
+        </div>
+        <div class="skill">
+            <h2>Skill 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis incidunt repellendus reprehenderit provident! Commodi dolores, omnis eligendi, corporis neque quidem quam eveniet, aut dignissimos libero provident quisquam iure. Officia, doloremque.</p>
+        </div>
+        <div class="skill">
+            <h2>Skill 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quisquam consequuntur cum, enim, fugit veniam aut officiis, impedit fuga facere quidem magni! Voluptatibus, deleniti. Quas consequuntur eligendi velit numquam asperiores?</p>
+        </div>
+        <div class="skill">
+            <h2>Skill 4</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eaque repellendus obcaecati vel doloremque quasi placeat fuga, blanditiis nam beatae incidunt. Dicta quisquam adipisci sit atque vero eos aperiam quaerat.</p>
+        </div>
     </section>
     </nav>
 </body>
