--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="#third">Portfolio</a></li>
             <li><a href="#fourth">Contact</a></li>
         </ul>
+    </nav>
     <section>
         <h1 id="#first">About us</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos temporibus maiores vel nesciunt enim necessitatibus unde, provident cumque fugit laudantium quas suscipit reprehenderit quidem aperiam dolorum tempore, rerum voluptatibus? Nemo.</p>
@@ -36,7 +37,12 @@
             <h2>Skill 4</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eaque repellendus obcaecati vel doloremque quasi placeat fuga, blanditiis nam beatae incidunt. Dicta quisquam adipisci sit atque vero eos aperiam quaerat.</p>
         </div>
+    <section>
+        <h1 id="#third">Portfolio</h1>
+        <div class="portfolio-item"><img src="img/s1.jpg" alt="s1"></div><br>
+        <div class="portfolio-item"><img src="img/s2.jpg" alt="s2"></div><br>
+        <div class="portfolio-item"><img src="img/s3.jpg" alt="s3"></div><br>
     </section>
-    </nav>
+    </section>
 </body>
 </html>
